<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/primary_material_light"
    tools:context="com.syncworks.s_light.fragment.BleSetFragment">
    <RelativeLayout
        android:id="@+id/rl_current_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/background_view_rounded_single">
        <TextView
            style="@style/tv_title_bold"
            android:id="@+id/tv_current_device_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_set_title_current_device"/>
        <TextView
            android:id="@+id/tv_current_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:layout_below="@id/tv_current_device_title"
            android:text="@string/ble_set_name_current_device"/>
        <TextView
            android:id="@+id/tv_current_device_address_lt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/Black"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/tv_current_device_name"
            android:layout_alignBottom="@id/tv_current_device_name"
            android:text="@string/lt"/>
        <TextView
            android:id="@+id/tv_current_device_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/Black"
            android:layout_toEndOf="@id/tv_current_device_address_lt"
            android:layout_alignBottom="@id/tv_current_device_address_lt"
            android:text="@string/ble_set_address_current_device"/>
        <TextView
            android:id="@+id/tv_current_device_address_gt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/Black"
            android:layout_toEndOf="@id/tv_current_device_address"
            android:layout_alignBottom="@id/tv_current_device_address"
            android:text="@string/gt"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/device_list_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_current_device"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_view_rounded_single">
        <Button
            android:id="@+id/btn_ble_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/White"
            android:text="@string/ble_set_stop"
            android:onClick="onClick"/>
        <TextView
            style="@style/tv_title_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_device_list_title"
            android:layout_alignBottom="@id/btn_ble_scan"
            android:text="@string/ble_set_title_list"/>
        <ListView
            android:id="@+id/list_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_ble_scan"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>
</RelativeLayout>
